# buho

./: #1#input.txt  .gitignore  .gitmodules  .travis.yml  .travis.yml_disabled  CMakeLists.txt  Messages.sh  README.md  buho.pro  buho.pro.user.f528408  buho.pro.user~23672cb823df82d9dca49151fe84208282a88239  buho_debian.tar  icons.qrc  input.txt  install.pri  main.cpp  main.qml  org.kde.buho.desktop  qml.qrc  travis-build.sh
QGumboParser/: .directory  CMakeLists.txt  QGumboParser.pri
QGumboParser/gumbo-parser/: .directory
QGumboParser/gumbo-parser/src/: gumbo.h  string_buffer.h
android/: AndroidManifest.xml  android.pri  gradle.properties~
android_files/: AndroidManifest.xml
assets/: assets.qrc  icon-theme.qrc
cmake/: FindLeptonica.cmake  FindOpenCV.cmake  FindTesseract.cmake
debian/: changelog  control  copyright
macos_files/: buho.icns  nota.icns
po/ar/: buho.po
po/az/: buho.po
po/ca/: buho.po
po/ca@valencia/: buho.po
po/cs/: buho.po
po/de/: buho.po
po/el/: buho.po
po/en_GB/: buho.po
po/eo/: buho.po
po/es/: buho.po
po/eu/: buho.po
po/fi/: buho.po
po/fr/: buho.po
po/ga/: buho.po
po/gl/: buho.po
po/he/: buho.po
po/hu/: buho.po
po/ia/: buho.po
po/it/: buho.po
po/ja/: buho.po
po/ka/: buho.po
po/ko/: buho.po
po/lt/: buho.po
po/lv/: buho.po
po/nl/: buho.po
po/nn/: buho.po
po/pa/: buho.po
po/pl/: buho.po
po/pt/: buho.po
po/pt_BR/: buho.po
po/ru/: buho.po
po/sa/: buho.po
po/sk/: buho.po
po/sl/: buho.po
po/sv/: buho.po
po/tr/: buho.po
po/uk/: buho.po
po/zh_CN/: buho.po
po/zh_TW/: buho.po
src/: CMakeLists.txt  Messages.sh  assets.qrc  buho.cpp  buho.h  linker.cpp  linker.cpp.autosave  linker.h  main.cpp  main.qml  org.kde.buho.desktop  org.kde.buho.metainfo.xml  qml.qrc  utils.js
src/android_files/: AndroidManifest.xml  build.gradle
src/assets/: assets.qrc  imgs.qrc
src/controllers/books/: bookscontroller.cpp  bookscontroller.h
src/controllers/links/: linkscontroller.cpp  linkscontroller.h
src/controllers/notes/: notescontroller.cpp  notescontroller.h
src/db/: db.cpp  db.h  dbactions.cpp  dbactions.h  script.sql
src/doodle/: doodlehanlder.cpp  doodlehanlder.h
src/models/: baselist.h  basemodel.cpp  basemodel.h  notes.cpp  notes.h  notesmodel.cpp  notesmodel.h
src/models/books/: booklet.cpp  booklet.h  books.cpp  books.h
src/models/links/: links.cpp  links.h  linksmodel.cpp  linksmodel.h
src/models/notes/: notes.cpp  notes.h  notesmodel.cpp  notesmodel.h
src/models/tags/: tagsmodel.cpp
src/providers/: abstractnotesprovider.h  nextnote.cpp  nextnote.h
src/syncing/: abstractnotessyncer.h  bookssyncer.cpp  bookssyncer.h  nextnote.cpp  nextnote.h  notessyncer.cpp  notessyncer.h  syncer.cpp  syncer.h
src/utils/: htmlparser.cpp  owl.h  owl.js  server.cpp  server.h
src/views/books/: BookletPage.qml  BooksView.qml  NewBookDialog.qml
src/views/links/: LinksView.qml  Previewer.qml  WebViewAndroid.qml  WebViewLinux.qml
src/views/notes/: NotesView.qml
src/views/tags/: TagPage.qml  TagsView.qml
src/widgets/: CardDelegate.qml  CardMenu.qml  CardsList.qml  CardsView.qml  CardsViewK.qml  ColorsBar.qml  LinkCardDelegate.qml  NewLinkDialog.qml  NewNoteDialog.qml  SettingsDialog.qml  WebView.qml
windows_files/config/: config.xml
